--- a/style.css
+++ b/style.css
@@ -1,22 +1,69 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-
-
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
-body{
-    font-family: "Roboto", sans-serif !important;
-    margin: 0;
-    padding: 0;
+body {
+  font-family: "Roboto", sans-serif !important;
+  margin: 0;
+  padding: 0;
 }
-.logo-navbar1{
-    width: 12.125em;
-    height: 3.5em;
-    
+.dell-logo-div{
+    width: 194px;
+    height: 56px;
 }
-.logo-navbar1 img{
-    height: 100%;
+.dell-logo-img{
     width: 100%;
+    height: 100%;
     object-fit: cover;
+}
+.form-position{
+    position:relative;
+    width: 40em;
+    margin-right: 10em;
+}
+.search-position{
+    border: none !important;
+    position: absolute;
+    right: 1%;
+}
+.dropdown-toggle::after{
+    display: none !important;
+}
+.signin-button-individual1{
+    background-color: #0672cb;
+    color: white;
+    border-radius:0.2rem;
+}
+.signin-button-individual2{
+    background-color: white;
+    color: #0672cb;
+    border: 1px solid #0672cb !important;
+    border-radius:0.2rem;
+}
+.WelcometoDell{
+    color: #636363 !important;
+}
+.signin-toggle:hover{
+    background-color: #d9d9d9 !important;
+}
+.arrow-down{
+    transition: 0.3s;
+}
+.signin-toggle:hover .arrow-down{
+    transform: rotate(-180deg);
+}
+.sign-in-group:hover .signin-card{
+    display: block !important;
+}
+.sign-in-group{
+    position: relative;
+}
+.signin-card{
+    position: absolute !important;
+    right: 0% !important;
+    border-radius: 1px !important;
+}
+.contactus-link:hover{
+    color: black;
 }
